--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 02:05:03 2018</p>
+         Last Run: Tue Jul 10 03:05:30 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 10, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>24</td>
-                        <td>54</td>
+                        <td>18</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>19</td>
                         <td>NW</td>
-                        <td>58</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>34</td>
-                        <td>54</td>
+                        <td>33</td>
+                        <td>56</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>18</td>
                         <td>NW</td>
-                        <td>64</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>32</td>
-                        <td>58</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>18</td>
                         <td>NW</td>
-                        <td>72</td>
+                        <td>62</td>
                      </tr>
                   </tbody>
                </table>
@@ -108,7 +108,7 @@
                "data":[
                  "19",
                  "19",
-                 "18"
+                 "17"
                ]
              },
              {
@@ -119,7 +119,7 @@
                "data":[
                  "19",
                  "19",
-                 "18"
+                 "17"
                ]
              }
            ]
@@ -170,8 +170,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "34",
+                 "18",
+                 "33",
                  "32"
                ]
              },
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "54",
-                 "58"
+                 "56",
+                 "56",
+                 "60"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "65",
                  "58",
-                 "64",
-                 "72"
+                 "62"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 02:05:03 2018</p>
+         Last Run: Tue Jul 10 03:05:30 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -237,7 +237,7 @@
                         <td>30</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>SSE</td>
+                        <td>S</td>
                         <td>15</td>
                      </tr>
                      <tr>
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 02:05:03 2018</p>
+         Last Run: Tue Jul 10 03:05:30 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -469,10 +469,10 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Chance of Rain</td>
-                        <td>10</td>
-                        <td>10</td>
+                        <td>11</td>
+                        <td>11</td>
                         <td>33</td>
-                        <td>84</td>
+                        <td>81</td>
                         <td>1</td>
                         <td>21</td>
                         <td>NNW</td>
@@ -481,10 +481,10 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Chance of Rain</td>
-                        <td>11</td>
-                        <td>11</td>
+                        <td>12</td>
+                        <td>12</td>
                         <td>31</td>
-                        <td>80</td>
+                        <td>75</td>
                         <td>2</td>
                         <td>19</td>
                         <td>NNW</td>
@@ -493,10 +493,10 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
-                        <td>11</td>
-                        <td>11</td>
+                        <td>12</td>
+                        <td>12</td>
                         <td>13</td>
-                        <td>72</td>
+                        <td>67</td>
                         <td>3</td>
                         <td>19</td>
                         <td>NNW</td>
@@ -505,10 +505,10 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>12</td>
-                        <td>12</td>
+                        <td>13</td>
+                        <td>13</td>
                         <td>11</td>
-                        <td>69</td>
+                        <td>64</td>
                         <td>5</td>
                         <td>18</td>
                         <td>NNW</td>
@@ -520,7 +520,7 @@
                         <td>14</td>
                         <td>14</td>
                         <td>11</td>
-                        <td>62</td>
+                        <td>60</td>
                         <td>6</td>
                         <td>18</td>
                         <td>NNW</td>
@@ -570,10 +570,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "10",
-                 "11",
                  "11",
                  "12",
+                 "12",
+                 "13",
                  "14"
                ]
              },
@@ -583,10 +583,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "10",
-                 "11",
                  "11",
                  "12",
+                 "12",
+                 "13",
                  "14"
                ]
              }
@@ -652,11 +652,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
-                 "80",
-                 "72",
-                 "69",
-                 "62"
+                 "81",
+                 "75",
+                 "67",
+                 "64",
+                 "60"
                ]
              },
              {
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 02:05:03 2018</p>
+         Last Run: Tue Jul 10 03:05:30 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -707,14 +707,14 @@
                      <tr>
                         <td>09:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>14</td>
-                        <td>14</td>
+                        <td>13</td>
+                        <td>13</td>
                         <td>2</td>
-                        <td>60</td>
+                        <td>59</td>
                         <td>2</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>W</td>
-                        <td>48</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -724,9 +724,9 @@
                         <td>1</td>
                         <td>52</td>
                         <td>3</td>
-                        <td>19</td>
+                        <td>21</td>
                         <td>WSW</td>
-                        <td>48</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -738,19 +738,19 @@
                         <td>4</td>
                         <td>18</td>
                         <td>SW</td>
-                        <td>49</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>3</td>
-                        <td>41</td>
+                        <td>2</td>
+                        <td>40</td>
                         <td>6</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>49</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -758,11 +758,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>2</td>
-                        <td>38</td>
+                        <td>37</td>
                         <td>7</td>
                         <td>14</td>
-                        <td>S</td>
-                        <td>50</td>
+                        <td>SSW</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -808,7 +808,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "14",
+                 "13",
                  "15",
                  "16",
                  "17",
@@ -821,7 +821,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "14",
+                 "13",
                  "15",
                  "16",
                  "17",
@@ -881,7 +881,7 @@
                  "2",
                  "1",
                  "0",
-                 "3",
+                 "2",
                  "2"
                ]
              },
@@ -890,11 +890,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
+                 "59",
                  "52",
                  "47",
-                 "41",
-                 "38"
+                 "40",
+                 "37"
                ]
              },
              {
@@ -902,11 +902,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "48",
-                 "48",
-                 "49",
-                 "49",
-                 "50"
+                 "46",
+                 "46",
+                 "47",
+                 "47",
+                 "48"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 02:05:03 2018</p>
+         Last Run: Tue Jul 10 03:05:30 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -945,38 +945,38 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>28</td>
                         <td>2</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>20</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>31</td>
                         <td>1</td>
                         <td>18</td>
                         <td>SE</td>
-                        <td>19</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>19</td>
                         <td>SE</td>
-                        <td>16</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -1020,9 +1020,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "24",
-                 "23",
-                 "22"
+                 "26",
+                 "25",
+                 "24"
                ]
              },
              {
@@ -1031,9 +1031,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "24",
-                 "23",
-                 "22"
+                 "26",
+                 "25",
+                 "24"
                ]
              }
            ]
@@ -1094,9 +1094,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
-                 "33",
-                 "37"
+                 "28",
+                 "31",
+                 "36"
                ]
              },
              {
@@ -1104,9 +1104,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "20",
-                 "19",
-                 "16"
+                 "24",
+                 "22",
+                 "19"
                ]
              }
            ]
