--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 03:05:30 2018</p>
+         Last Run: Tue Jul 10 04:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 10, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,35 +34,35 @@
                         <td>19</td>
                         <td>19</td>
                         <td>18</td>
-                        <td>56</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>19</td>
                         <td>NW</td>
-                        <td>65</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>33</td>
-                        <td>56</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>18</td>
                         <td>NW</td>
-                        <td>58</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>32</td>
-                        <td>60</td>
+                        <td>35</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>18</td>
                         <td>NW</td>
-                        <td>62</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -107,7 +107,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "19",
-                 "19",
+                 "18",
                  "17"
                ]
              },
@@ -118,7 +118,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "19",
-                 "19",
+                 "18",
                  "17"
                ]
              }
@@ -172,7 +172,7 @@
                "data":[
                  "18",
                  "33",
-                 "32"
+                 "35"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "56",
-                 "60"
+                 "58",
+                 "59",
+                 "61"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
-                 "58",
-                 "62"
+                 "67",
+                 "66",
+                 "69"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 03:05:30 2018</p>
+         Last Run: Tue Jul 10 04:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -258,11 +258,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>31</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>11</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -270,11 +270,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>36</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -416,8 +416,8 @@
                "data":[
                  "30",
                  "29",
-                 "32",
-                 "35",
+                 "31",
+                 "36",
                  "42"
                ]
              },
@@ -428,8 +428,8 @@
                "data":[
                  "15",
                  "14",
-                 "11",
-                 "5",
+                 "10",
+                 "4",
                  "1"
                ]
              }
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 03:05:30 2018</p>
+         Last Run: Tue Jul 10 04:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 03:05:30 2018</p>
+         Last Run: Tue Jul 10 04:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -706,63 +706,63 @@
                   <tbody>
                      <tr>
                         <td>09:00 AM</td>
-                        <td>Partly Cloudy</td>
-                        <td>13</td>
-                        <td>13</td>
+                        <td>Clear</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>1</td>
+                        <td>57</td>
                         <td>2</td>
-                        <td>59</td>
-                        <td>2</td>
-                        <td>18</td>
-                        <td>W</td>
-                        <td>46</td>
+                        <td>16</td>
+                        <td>WSW</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Partly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>1</td>
-                        <td>52</td>
-                        <td>3</td>
-                        <td>21</td>
-                        <td>WSW</td>
-                        <td>46</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>47</td>
-                        <td>4</td>
-                        <td>18</td>
+                        <td>49</td>
+                        <td>3</td>
+                        <td>21</td>
                         <td>SW</td>
-                        <td>47</td>
+                        <td>8</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 AM</td>
+                        <td>Clear</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>0</td>
+                        <td>44</td>
+                        <td>4</td>
+                        <td>19</td>
+                        <td>SSW</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>Clear</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>2</td>
-                        <td>40</td>
+                        <td>39</td>
                         <td>6</td>
-                        <td>16</td>
-                        <td>SSW</td>
-                        <td>47</td>
+                        <td>18</td>
+                        <td>S</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>Clear</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>2</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>7</td>
-                        <td>14</td>
-                        <td>SSW</td>
-                        <td>48</td>
+                        <td>16</td>
+                        <td>S</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -808,11 +808,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "13",
-                 "15",
+                 "14",
                  "16",
                  "17",
-                 "18"
+                 "18",
+                 "20"
                ]
              },
              {
@@ -821,11 +821,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "13",
-                 "15",
+                 "14",
                  "16",
                  "17",
-                 "18"
+                 "18",
+                 "20"
                ]
              }
            ]
@@ -878,8 +878,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
                  "1",
+                 "0",
                  "0",
                  "2",
                  "2"
@@ -890,11 +890,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "59",
-                 "52",
-                 "47",
-                 "40",
-                 "37"
+                 "57",
+                 "49",
+                 "44",
+                 "39",
+                 "36"
                ]
              },
              {
@@ -902,11 +902,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "46",
-                 "47",
-                 "47",
-                 "48"
+                 "9",
+                 "8",
+                 "7",
+                 "7",
+                 "8"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 03:05:30 2018</p>
+         Last Run: Tue Jul 10 04:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -964,7 +964,7 @@
                         <td>1</td>
                         <td>18</td>
                         <td>SE</td>
-                        <td>22</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -1105,7 +1105,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "24",
-                 "22",
+                 "23",
                  "19"
                ]
              }
